@@ -4,6 +4,7 @@ gladedir = $(datadir)/sodipodi
 glade_DATA = 			\
 	sodipodi.glade 		\
 	stroke-dialog.glade	\
-	text-dialog.glade
+	text-dialog.glade	\
+	xml-tree.glade
 
 EXTRA_DIST = *.xpm $(glade_DATA)
